# holographic_cone

./: .gitignore  README.md  README_C_obs.md  README_DM.md  requirements.txt
.ci/: make_inventory.sh
ALP/: models
C0_FRW_CLOSED/: orchestrate_c0.py
COS_XI_IRSLIDE/: pyproject.toml
COS_XI_IRSLIDE/artifacts/: background_ledger.json  frw_reduction_ledger.json  ward_irslide_cert.json  ward_irslide_cert.sha256
COS_XI_IRSLIDE/profiles/: background_provenance.json  frw_proof.txt  frw_provenance.json  provenance.txt
COS_XI_IRSLIDE/src/cosxi_ir/: __init__.py  ward.py
COS_XI_IRSLIDE/tests/: test_trivial_zero.py  test_ward_model_A.py  test_ward_model_B.py
DM_OFFICIAL/: .gitignore
G1_LAMBDA_KK/: orchestrate_G1_LAMBDA_KK.py
KK/: modes_analytic.json
ZT3_AQFT_LOCAL/: orchestrate_zt3.py
cert/: cert_sm_uv_FAIL.json  cert_sm_uv_MIN.json  cert_sm_uv_PASS.json  cert_sm_uv_SYN.json  cert_sm_uv_SYN_k010.json
configs/: SWEEP.json  dsector_freezein_fermion_from_ledger.json  dsector_freezein_scalar_from_ledger.json  dsector_freezein_topo_from_ledger.json  gate_nu_7keV.json  (+11 more)
cosxi_c0c4/: pyproject.toml
cosxi_c0c4/cosxi_c0c4/: pyproject.toml
cosxi_c0c4/cosxi_c0c4/artifacts/: xi_cert.json  xi_cert.sha256
cosxi_c0c4/cosxi_c0c4/src/cosxi/: __init__.py  io.py  pipeline.py  sequester.py  units.py
cosxi_c0c4/cosxi_c0c4/tests/: test_cli.py  test_regression.py  test_units_signs.py
cosxi_c0c4/inputs/: baseline.json
cosxi_c0c4/src/cosxi/: __init__.py  cli.py  report.py
cosxi_c0c4/tests/: test_cli.py  test_invariance.py  test_regression.py  test_units_signs.py
(+322 files in other folders)
